fix: 🐛 scroll on mobile

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -263,12 +263,10 @@ table,
 pre {
 	position: relative;
 	--padding-block: 1rem;
-	--padding-inline: 2rem;
+	--padding-inline: 1rem;
 	padding: var(--padding-block) var(--padding-inline);
-	padding-right: calc(var(--padding-inline) * 2);
-	margin-left: calc(var(--padding-inline) * -1);
-	margin-right: calc(var(--padding-inline) * -1);
 	font-family: var(--font-mono);
+	border-radius: 8px;
 
 	line-height: 1.5;
 	font-size: 0.85em;
